# format-book

./: CLAUDE.md  README.md  example.env  format-text.ipynb  main.py  pyproject.toml
.github/workflows/: pytest.yml
lib/: helpers.py
src/: format_folder.py  helpers.py
src/utils/: format_folder.py  helpers.py
tests/: test_format_folder.py
