[tool.poetry]
name = "format-book"
version = "0.1.0"
description = "Project to format the book with chatgpt"
authors = ["Dzianis Sheka <dzianis.sheka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
openai = "^1.54.3"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = ">=7.0.0"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
